# pixi-ros

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
src/pixi_ros/: __init__.py  cli.py  config.py  init.py  mappings.py  package_xml.py  utils.py  validator.py  workspace.py
src/pixi_ros/data/: README.md  README_PIXI.md.template  conda-forge.yaml
tests/: test_cli.py  test_config.py  test_gateway_availability.py  test_init.py  test_mappings.py  test_package_xml.py  test_utils.py  test_validator.py  test_workspace.py
tests/data/test_channel/noarch/: repodata.json  ros-kilted-custom-testing-package-1.2.3-h4616a5c_0.conda
tests/examples/ws1/: pixi.toml
tests/examples/ws1/src/package-a/: CMakeLists.txt  package.xml
tests/examples/ws1/src/package-b/: package.xml  setup.cfg  setup.py
tests/examples/ws1/src/package-b/test/: test_flake8.py
tests/fixtures/mock_workspace/: README.md
tests/fixtures/mock_workspace/src/legacy_pkg/: package.xml
tests/fixtures/mock_workspace/src/my_cpp_pkg/: CMakeLists.txt  package.xml
tests/fixtures/mock_workspace/src/my_mixed_pkg/: package.xml
tests/fixtures/mock_workspace/src/my_python_pkg/: package.xml  setup.py
