<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>package-a</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ruben.arts@hotmail.com">rubenarts</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend version_gte="1.2.3">ament_lint_auto</test_depend>
  <test_depend version_eq="1.0.0">ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
