<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>package-b</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ruben.arts@hotmail.com">rubenarts</maintainer>
  <license>TODO: License declaration</license>

  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend version_gte="1.2.3">ament_lint_auto</test_depend>
  <test_depend version_eq="1.0.0">ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
