<?xml version="1.0"?>
<package format="2">
  <name>legacy_pkg</name>
  <version>0.5.0</version>
  <description>A legacy package using format 2</description>
  <maintainer email="legacy@example.com">Legacy Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Format 2 uses run_depend instead of exec_depend -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
